# test-task-notification-service

./: README.md  docker-compose.yml
nginx/: nginx.conf
notification_service/: .env  Dockerfile  pyproject.toml
notification_service/api/: serializers.py  services.py  urls.py  views.py
notification_service/notification/: __init__.py  admin.py  models.py  tasks.py
notification_service/settings/: celery.py  config.py  settings.py  urls.py
